actually working freeimage

--- a/src/01_Exercise/Makefile
+++ b/src/01_Exercise/Makefile
@@ -5,11 +5,10 @@ TARGET = exercise1
 SRCS = main.cpp summation.cpp imageprocessing.cpp
 OBJS = $(subst .cpp,.o,$(SRCS))
 
-INCDIRS = -I../Stopwatch \
-					-I../FreeImage
-CXXFLAGS = -Wall -g -pthread -fopenmp $(INCDIRS)
+INCDIRS = -L. -I../Stopwatch
+CXXFLAGS = -Wall -fPIC -std=gnu++17 -pthread -fopenmp $(INCDIRS)
 
-LDLIBS = -lfreeimageplus -static
+LDLIBS = -lfreeimageplus -ltbb
 LDFLAGS = $(LDLIBS) 
 
 .PHONY: all clean distclean
